PROJECT(newrpmdb)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")

INCLUDE(FindSqlite3)
IF (SQLITE3_FOUND)
    INCLUDE_DIRECTORIES(${SQLITE3_INCLUDE_DIR})
    ADD_EXECUTABLE(db_ext db_ext.cpp)
    TARGET_LINK_LIBRARIES(db_ext ${DB_LIBRARIES})
    TARGET_LINK_LIBRARIES(db_ext ${SQLITE3_LIBRARIES})
ENDIF (SQLITE3_FOUND)
