# INCLUDE(FindSqlite3)
# IF (SQLITE3_FOUND)
#     INCLUDE_DIRECTORIES(${SQLITE3_INCLUDE_DIR})
#     ADD_EXECUTABLE(db_ext db_ext.cpp)
#     TARGET_LINK_LIBRARIES(db_ext ${DB_LIBRARIES})
#     TARGET_LINK_LIBRARIES(db_ext ${SQLITE3_LIBRARIES})
# ENDIF (SQLITE3_FOUND)


SET (swdb_srcs
     zk_test.cpp)

ADD_LIBRARY(libswdb SHARED ${swdb_srcs})
# TARGET_LINK_LIBRARIES(libswdb ${SOLV_LIBRARY} ${SOLVEXT_LIBRARY})
SET_TARGET_PROPERTIES(libswdb PROPERTIES OUTPUT_NAME "swdb")
SET_TARGET_PROPERTIES(libswdb PROPERTIES SOVERSION 0)
